# design-patterns

./: .gitignore  README.md
creational_patterns/: Creational_Patterns.MD
creational_patterns/abstract_factory/: Abstract_factory.MD  CMakeLists.txt  abastract_factory.cpp  main.cpp
creational_patterns/abstract_factory/Factories/include/: UiFactory.h
creational_patterns/abstract_factory/Factories/include/Mac/: MacFactory.h
creational_patterns/abstract_factory/Factories/include/Windows/: WindwosFactory.h
creational_patterns/abstract_factory/Factories/src/: MacFactory.cpp  WindwosFactory.cpp
creational_patterns/abstract_factory/UiComponents/include/: Button.h  CheckBox.h  TextBox.h  UiComponent.h
creational_patterns/abstract_factory/UiComponents/include/Mac/: MacButton.h  MacCheckBox.h  MacTextBox.h
creational_patterns/abstract_factory/UiComponents/include/Windows/: WindowsButton.h  WindowsCheckBox.h  WindowsTextBox.h
creational_patterns/abstract_factory/UiComponents/src/: UiComponent.cpp
creational_patterns/prototype/: Main.java  Prototype.MD
creational_patterns/prototype/src/: IPrototype.java
creational_patterns/prototype/src/config/: Configuration.java  UiConfig.java
creational_patterns/prototype/src/config/enums/: Quality.java  Ui.java
creational_patterns/prototype/src/manager/: Pair.java  PrototypeManager.java
creational_patterns/singleton/: Singleton.MD  singleton.sln
creational_patterns/singleton/implementation/: Program.cs
creational_patterns/singleton/implementation/lib/: Class1.cs  Class2.cs
(+2 files in other folders)
